change scrollbar and fix random aos times

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,25 @@ body {
   color: #000000;
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #c1c1c1;
+  outline: 1px solid #ffffff;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #adadad;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  outline: 1px solid #ffffff;
+}
+
 :disabled {
   cursor: not-allowed;
   opacity: 0.4;
